# FGeo-NSS

./: .gitignore  README.md  config.json  pyproject.toml
src/nss/: data.py  dataset.py  model.py  problem.py  solve.py  tests.py  tools.py  train.py
